--- a/Blood App/app/src/main/res/values/strings.xml
+++ b/Blood App/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Blood</string>
+    <string name="BaseURL">http://192.168.29.237:3000/</string>
 </resources>
